# prod-health-guardian

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-lint.yml  python-test.yml
config/grafana/: grafana-dashboard.json
config/grafana/dashboards/: system_metrics.json
config/grafana/provisioning/dashboards/: default.yml
config/grafana/provisioning/datasources/: datasources.yml
config/prometheus/: prometheus.yml
scripts/: check.sh
src/prod_health_guardian/: __init__.py  metrics.py
src/prod_health_guardian/api/: __init__.py  main.py
src/prod_health_guardian/collectors/: __init__.py  base.py  cpu.py  gpu.py  memory.py
src/prod_health_guardian/metrics/: __init__.py  collectors.py  prometheus.py
src/prod_health_guardian/models/: __init__.py  api.py  metrics.py
src/prod_health_guardian/utils/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_collectors.py  test_metrics.py  test_models.py  utils.py
tests/api/: test_main.py
tests/collectors/: conftest.py  test_base.py  test_cpu.py  test_gpu.py  test_memory.py
tests/metrics/: test_collector.py  test_prometheus.py
tests/models/: test_metrics.py
